# filter-designer

./: .gitignore  CMakeLists.txt  README.md  privacy-policy.md
cmd/: CMakeLists.txt  main.cpp
gui/: Backend.cpp  Backend.hpp  CMakeLIsts.txt  CMakeLists.txt  DefaultControlValues.hpp  ListSelectorValues.cpp  ListSelectorValues.hpp  Main.cpp  Main.qml  backend.cpp  backend.hpp  defaultValues.hpp  listSelectorValues.cpp  listSelectorValues.hpp  main.cpp  valueRange.hpp
gui/icons/: app_icon.icns
gui/qt/: Controls.qml  FilterCoefficients.qml  FrequencyResponse.qml  Main.qml
gui/qt/qml/: Controls.qml  FilterCoefficients.qml  Main.qml
macos/: Info.plist.in
shared/: CMakeLists.txt  FFT.cpp  FFT.hpp  Filter.hpp  FilterPass.hpp  FilterResponse.hpp  Phase.cpp  Phase.hpp  Sampling.cpp  Sampling.hpp  SineWave.cpp  SineWave.hpp  Unwrap.cpp  Unwrap.hpp
shared/fir/: BlackmanWindow.cpp  FIRFilter.cpp  FIRFilter.hpp  RectangularWindow.cpp  RectangularWindow.hpp  Window.cpp  Window.hpp
shared/iir/: Capacitance.hpp  HighPassCRCircuit.cpp  HighPassCRCircuit.hpp  IIRFilter.cpp  IIRFilter.hpp  IIRFilterCoefficients.hpp  LowPassRCCircuit.cpp  LowPassRCCircuit.hpp  RCGrid.cpp  RCGrid.hpp
src/: BlackmanWindow.cpp  BlackmanWindow.hpp  FFT.cpp  FFT.hpp  FIRFilter.cpp  FIRFilter.hpp  FrequencyResponse.cpp  FrequencyResponse.hpp  IIRCoefficients.h  IIRFilter.cpp  IIRFilter.hpp  RCGrid.cpp  RCGrid.h  RCGrid.hpp  RectangularWindow.cpp  Sampling.cpp  Sampling.hpp  SineWave.cpp  SineWave.hpp  backend.hpp  main.cpp
src/fir/: BlackmanWindow.cpp  BlackmanWindow.hpp  FIRFilter.cpp  FIRFilter.hpp  RectangularWindow.hpp  Window.hpp
src/iir/: IIRFilter.cpp
test/: BlackmanWindowTest.cpp  CMakeLists.txt  FFTTest.cpp  FIRFilterTest.cpp  IIRFilterTest.cpp  PhaseTest.cpp  RCGridTest.cpp  RectangularWindowTest.cpp  SamplingTest.cpp  SineWaveTest.cpp  TestModule.cpp
test/fir/: BlackmanWindowTest.cpp  FIRFilterTest.cpp  RectangularWindowTest.cpp
test/iir/: HighPassCRCircuitTest.cpp  IIRFilterTest.cpp  LowPassRCCircuitTest.cpp  RCGridTest.cpp
